cmake_minimum_required(VERSION 3.30.3)

project(validator LANGUAGES CXX)

add_executable(validator "main.cpp")

enable_testing()

function(make_test name)
	add_test(NAME ${name} COMMAND validator "${CMAKE_CURRENT_SOURCE_DIR}/m68000/v1/${name}.json")
endfunction()

make_test("ABCD")
make_test("ADDX.w")
make_test("ASL.w")
make_test("BTST")
make_test("CMP.w")
make_test("EOR.w")
make_test("JMP")
make_test("LSR.l")
make_test("MOVEM.l")
make_test("MOVEtoUSP")
make_test("NEGX.l")
make_test("OR.w")
make_test("ROR.b")
make_test("ROXR.w")
make_test("SUB.w")
make_test("TAS")
make_test("ADD.b")
make_test("AND.b")
make_test("ASR.b")
make_test("Bcc")
make_test("CMPA.l")
make_test("EORItoCCR")
make_test("JSR")
make_test("LSR.w")
make_test("MOVEM.w")
make_test("MULS")
make_test("NEGX.w")
make_test("ORItoCCR")
make_test("ROR.l")
make_test("RTE")
make_test("SUBA.l")
make_test("TRAP")
make_test("ADD.l")
make_test("AND.l")
make_test("ASR.l")
make_test("CHK")
make_test("CMPA.w")
make_test("EORItoSR")
make_test("LEA")
make_test("MOVE.b")
make_test("MOVEP.l")
make_test("MULU")
make_test("NOP")
make_test("ORItoSR")
make_test("ROR.w")
make_test("RTR")
make_test("SUBA.w")
make_test("TRAPV")
make_test("ADD.w")
make_test("AND.w")
make_test("ASR.w")
make_test("CLR.b")
make_test("DBcc")
make_test("EXG")
make_test("LINK")
make_test("MOVE.l")
make_test("MOVEP.w")
make_test("NBCD")
make_test("NOT.b")
make_test("PEA")
make_test("ROXL.b")
make_test("RTS")
make_test("SUBX.b")
make_test("TST.b")
make_test("ADDA.l")
make_test("ANDItoCCR")
make_test("BCHG")
make_test("CLR.l")
make_test("DIVS")
make_test("EXT.l")
make_test("LSL.b")
make_test("MOVE.q")
make_test("MOVEfromSR")
make_test("NEG.b")
make_test("NOT.l")
make_test("RESET")
make_test("ROXL.l")
make_test("SBCD")
make_test("SUBX.l")
make_test("TST.l")
make_test("ADDA.w")
make_test("ANDItoSR")
make_test("BCLR")
make_test("CLR.w")
make_test("DIVU")
make_test("EXT.w")
make_test("LSL.l")
make_test("MOVE.w")
make_test("MOVEfromUSP")
make_test("NEG.l")
make_test("NOT.w")
make_test("ROL.b")
make_test("ROXL.w")
make_test("STOP")
make_test("SUBX.w")
make_test("TST.w")
make_test("ADDX.b")
make_test("ASL.b")
make_test("BSET")
make_test("CMP.b")
make_test("EOR.b")
make_test("ILLEGAL_LINEA")
make_test("LSL.w")
make_test("MOVEA.l")
make_test("MOVEtoCCR")
make_test("NEG.w")
make_test("OR.b")
make_test("ROL.l")
make_test("ROXR.b")
make_test("SUB.b")
make_test("SWAP")
make_test("UNLINK")
make_test("ADDX.l")
make_test("ASL.l")
make_test("BSR")
make_test("CMP.l")
make_test("EOR.l")
make_test("ILLEGAL_LINEF")
make_test("LSR.b")
make_test("MOVEA.w")
make_test("MOVEtoSR")
make_test("NEGX.b")
make_test("OR.l")
make_test("ROL.w")
make_test("ROXR.l")
make_test("SUB.l")
make_test("Scc")
